Fix extra spacing bug on table rows

--- a/src/explorer-components/SubmissionItem/SubmissionItem.module.scss
+++ b/src/explorer-components/SubmissionItem/SubmissionItem.module.scss
@@ -2,6 +2,10 @@
 
 .submissionItemRow:last-child {
   margin-bottom: $xxl-spacing * 3;
+
+  @media only screen and (min-width: 48em) {
+    margin-bottom: 0;
+  }
 }
 
 .details {
